Yahoo quotations fixer and warning fixes