@@ -371,7 +371,7 @@ public class Install {
 
 	protected void debugLevel(String[] args) {
 		if (args.length > 0 && args[0].equals("-d")) {
-			Install.debug = new Boolean(args[1]);
+			Install.debug = Boolean.valueOf(args[1]);
 		} else {
 			Install.debug = false;
 		}
